# cppa

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  README.md  README.txt  configure
src/: abs_polynomial.hh  comparator.hh  comparator.hxx  label.cc  label.hh  label.hxx  main.cc  polynomial.cc  polynomial.hh  polynomial.hxx  weight.hh  weight.hxx
